backgroundspreviewsdir = $(kde_datadir)/basket/backgrounds/previews
backgroundspreviews_DATA = \
	abstract.png \
	alien-artifact.png \
	basket-title.png \
	green-curves.png \
	light.png \
	painting.png \
	pens.png \
	pins.png \
	rainbow-balls.png \
	rounds-line.png \
	strings.png \
	todo.png \
	working.png
